--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 				<div class="header-top">
 					<div class="header-top__item">
 						<ul>
-							<li><a href="#">Войти</a> </li>
+							<li><a data-target="modal" class="open-btn" href="#">Войти</a> </li>
 							<li><a href="#">Зарегистрироваться</a></li>
 						</ul>
 					</div>
@@ -38,10 +38,10 @@
 				</div>
 				<div class="header-wrapper">
 					<div class="header-list">
-						<div class="header-burger">
+						<div id="openCatalog" class="header-burger">
 							Все категории
 						</div>
-						<div class="header-catalog none">
+						<div id="catalog" class="header-catalog none">
 							<ul>
 								<li><a href="">asd</a></li>
 								<li><a href="">asd</a></li>
@@ -334,13 +334,14 @@
 				<div class="comments-content">
 					<div class="comments-item">
 						<div class="comments-item__img">
-							<img src="assets/img/client-1.jpg" alt="клиент">
+							<img src="assets/img/photo_2021-08-02_13-00-47.jpg" alt="клиент">
 						</div>
 						<div class="comments-item__title">
 							<h3>Нурсултанов Руслан</h3>
 						</div>
 						<div class="comments-item__text">
-							<p>Ебать нихуева закупился чисто кайф а ща чисто на чиле на расслабоне можно пивко хуярить качаца</p>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet totam quae distinctio voluptatem, explicabo repellat hic neque ratione cupiditate assumenda consequuntur. Veniam fugit nulla laboriosam, numquam eaque esse quis repudiandae?
+							Saepe eos necessitatibus repellat temporibus est nesciunt, quibusdam officia voluptatem. Ipsa eum quae voluptatem inventore animi impedit excepturi minus, quaerat ab fuga? Aliquam porro voluptatibus corrupti fugiat fugit nobis incidunt!</p>
 						</div>
 					</div>
 					<div class="comments-item">
@@ -351,7 +352,8 @@
 							<h3>Нурсултанов Руслан</h3>
 						</div>
 						<div class="comments-item__text">
-							<p>Ебать нихуева закупился чисто кайф а ща чисто на чиле на расслабоне можно пивко хуярить качаца</p>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet totam quae distinctio voluptatem, explicabo repellat hic neque ratione cupiditate assumenda consequuntur. Veniam fugit nulla laboriosam, numquam eaque esse quis repudiandae?
+							Saepe eos necessitatibus repellat temporibus est nesciunt, quibusdam officia voluptatem. Ipsa eum quae voluptatem inventore animi impedit excepturi minus, quaerat ab fuga? Aliquam porro voluptatibus corrupti fugiat fugit nobis incidunt!</p>
 						</div>
 					</div>
 					<div class="comments-item">
@@ -362,7 +364,8 @@
 							<h3>Нурсултанов Руслан</h3>
 						</div>
 						<div class="comments-item__text">
-							<p>Ебать нихуева закупился чисто кайф а ща чисто на чиле на расслабоне можно пивко хуярить качаца</p>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet totam quae distinctio voluptatem, explicabo repellat hic neque ratione cupiditate assumenda consequuntur. Veniam fugit nulla laboriosam, numquam eaque esse quis repudiandae?
+							Saepe eos necessitatibus repellat temporibus est nesciunt, quibusdam officia voluptatem. Ipsa eum quae voluptatem inventore animi impedit excepturi minus, quaerat ab fuga? Aliquam porro voluptatibus corrupti fugiat fugit nobis incidunt!</p>
 						</div>
 					</div>
 				</div>
@@ -372,7 +375,7 @@
 		<section class="arrivals">
 			<div class="container">
 				<div class="arrivals-title">
-					<h2>Новое прибытие</h2>
+					<h2>Новое поступление</h2>
 				</div>
 				<div class="products-content">
 					<div class="products-item">
@@ -510,10 +513,106 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer-content">
-					<p>Qwerty.kz © 2021. All Rights Reserved.</p>
+					<div class="footer-item">
+						<div class="footer-title">
+							<h2>Присоединяйтесь</h2>
+						</div>
+						<div class="footer-social">
+							<div class="footer-social__item">
+								<a href="#"><img src="assets/img/media/fb.svg" width="40" alt="Facebook"></a>
+							</div>
+							<div class="footer-social__item">
+								<a href="#"><img src="assets/img/media/vk.svg" width="40" alt="Vk"></a>
+							</div>
+							<div class="footer-social__item">
+								<a href="#"><img src="assets/img/media/instagram.svg" width="40" alt="Instagram"></a>
+							</div>
+							<div class="footer-social__item">
+								<a href="#"><img src="assets/img/media/youtube.svg" width="40" alt="Youtube"></a>
+							</div>
+						</div>
+						<div class="footer-logo">
+							<a href="index.html"><img src="assets/img/logo.svg" alt="qwerty" width="200"></a>
+						</div>
+					</div>
+					<div class="footer-item">
+						<div class="footer-title">
+							<h2>Компания QWERTY</h2>
+						</div>
+						<div class="footer-list">
+							<ul>
+								<li><a href="#">Контакты</a></li>
+								<li><a href="#">Информация о сети</a></li>
+								<li><a href="#">Оптовый отдел</a></li>
+								<li><a href="#">Тендеры</a></li>
+								<li><a href="#">Партнерство</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="footer-item">
+						<div class="footer-title">
+							<h2>Полезно</h2>
+						</div>
+						<div class="footer-list">
+							<ul>
+								<li><a href="#">Новости</a></li>
+								<li><a href="#">Советы по выбору техники</a></li>
+								<li><a href="#">Условия возврата и гарантии</a></li>
+								<li><a href="#">Программа лояльности "QWERTYcoins"</a></li>
+								<li><a href="#">Партнерство</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
+			<div class="footer-copy">
+				<p>Qwerty.kz © 2021. Все права защищены.</p>
+			</div>
 		</footer>
+
+
+		<div class="modals">
+			<div class="modal-overlay">
+				<div class="modal" data-target="form-popup">
+					<div class="modal-tabs">
+						<div id="signIn" class="modal-tabs-item modal-active-1">
+							<h3>Войти</h3>
+						</div>
+						<div id="signUp" class="modal-tabs-item">
+							<h3>Зарегистрироваться</h3>
+						</div>
+					</div>
+					<form role="form" action="#" method="post" class="form modal-1">
+						<div class="form-wrapper">
+							<input name="name" type="name" placeholder="Имя..." required>
+							<input name="email" type="email" placeholder="Почта..." required>
+							<input name="phone" type="phone" class="phone" placeholder="Мобильный телефон..." required>
+							<input name="phone" type="phone" class="phone" placeholder="Пароль..." required>
+							<div class="modal-checkbox">
+								<label for="checkbox">
+									<input id="checkbox" name="checkbox" type="checkbox" class="checkbox" required>
+									<p>adssadasdasdsa</p>
+								</label>
+							</div>
+							<button name="submit" type="submit" class="form-wrapper-submit">Оставить заявку</button>
+						</div>
+					</form>
+					<form role="form" action="#" method="post" class="form modal-2">
+						<div class="form-wrapper">
+							<input name="name" type="name" placeholder="Имя..." required>
+							<input name="email" type="email" placeholder="Почта..." required>
+							<div class="modal-checkbox">
+								<label for="checkbox">
+									<input id="checkbox" name="checkbox" type="checkbox" class="checkbox" required>
+									<p>adssadasdasdsa</p>
+								</label>
+							</div>
+							<button name="submit" type="submit" class="form-wrapper-submit">Оставить заявку</button>
+						</div>
+					</form>
+				</div>
+			</div>
+    	</div>
 
 	</body>
 </html>
