--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 							<div class="header-list-item">
 								<nav class="overlayMenu">
 									<ul class="header-list__item">
-										<li><a href="#">Акции</a></li>
+										<li><a href="tovar.html">Акции</a></li>
 										<li><a href="#">Для партнеров</a></li>
 										<li><a href="#">Частные объявления</a></li>
 										<li><a href="#">Новости</a></li>
