new pages product-in allCatalog

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 						<div id="btn-nav" class="header-mobile-item header-mobile-logo">
 							<img class="header-mobile-img-3" src="assets/img/header-mob/logo-mobile.svg" alt="Qwerty" width="40">
 						</div>
-						<div class="header-mobile-item">
+						<div data-target="modal" class="header-mobile-item open-btn">
 							<img class="header-mobile-img-4" src="assets/img/header-mob/lk.svg" alt="Личный кабинет" width="30">
 						</div>
 						<div class="header-mobile-item">
@@ -60,19 +60,20 @@
 							<div class="navigation__inner">
 								<div class="category-menu">
 									<ul>
-										<li>Смартфоны и гаджеты</li>
-										<li>Ноутбуки и компьютеры</li>
-										<li>Всё для геймеров</li>
-										<li>ТВ, аудио, видео</li>
-										<li>Фототехника и квадрокоптеры</li>
-										<li>Бытовая техника</li>
-										<li>Техника для кухни</li>
-										<li>Красота и здоровье</li>
-										<li>Спорт, туризм, багаж</li>
-										<li>Автотовары и транспорт</li>
-										<li>Детские товары</li>
-										<li>Товары для дома и сада</li>
+										<li><a href="#">Смартфоны и гаджеты</a></li>
+										<li><a href="#">Ноутбуки и компьютеры</a></li>
+										<li><a href="#">Всё для геймеров</a></li>
+										<li><a href="#">ТВ, аудио, видео</a></li>
+										<li><a href="#">Фототехника и квадрокоптеры</a></li>
+										<li><a href="#">Бытовая техника</a></li>
+										<li><a href="#">Техника для кухни</a></li>
+										<li><a href="#">Красота и здоровье</a></li>
+										<li><a href="#">Спорт, туризм, багаж</a></li>
+										<li><a href="#">Автотовары и транспорт</a></li>
+										<li><a href="#">Детские товары</a></li>
+										<li><a href="#">Товары для дома и сада</a></li>
 									</ul>
+									<div id="btn-close" class="category header-burger dn-mob">Закрыть</div>
 								</div>
 							</div>
 						</div>
@@ -80,9 +81,9 @@
 							<div class="header-list-item">
 								<nav class="overlayMenu">
 									<ul class="header-list__item">
-										<li><a class="dn-mob" href="#">Акции</a></li>
+										<li><a href="allCatalog.html">Каталог товаров</a></li>
+										<li class="dn-mob"><a href="#">Акции</a></li>
 										<li><a href="#">Для партнеров</a></li>
-										<li><a href="#">Частные объявления</a></li>
 										<li><a href="#">Новости</a></li>
 									</ul>
 								</nav>
@@ -100,7 +101,7 @@
 				</div>
 				<div class="navBurger" role="navigation" id="navToggle"></div>
 			</div>
-		</header>
+	</header>
 
 		<main class="main">
 			<div class="main-container">
@@ -370,26 +371,24 @@
 				<div class="comments-content">
 					<div class="comments-item">
 						<div class="comments-item__img">
-							<img src="assets/img/comments-1.jpg" alt="клиент">
-						</div>
-						<div class="comments-item__title">
-							<h3>Нурсултанов Руслан</h3>
-						</div>
-						<div class="comments-item__text">
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet totam quae distinctio voluptatem, explicabo repellat hic neque ratione cupiditate assumenda consequuntur. Veniam fugit nulla laboriosam, numquam eaque esse quis repudiandae?
-							Saepe eos necessitatibus repellat temporibus est nesciunt, quibusdam officia voluptatem. Ipsa eum quae voluptatem inventore animi impedit excepturi minus, quaerat ab fuga? Aliquam porro voluptatibus corrupti fugiat fugit nobis incidunt!</p>
-						</div>
-					</div>
-					<div class="comments-item">
-						<div class="comments-item__img">
 							<img src="assets/img/comments-2.jpg" alt="клиент">
 						</div>
 						<div class="comments-item__title">
 							<h3>Нурсултанов Руслан</h3>
 						</div>
 						<div class="comments-item__text">
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet totam quae distinctio voluptatem, explicabo repellat hic neque ratione cupiditate assumenda consequuntur. Veniam fugit nulla laboriosam, numquam eaque esse quis repudiandae?
-							Saepe eos necessitatibus repellat temporibus est nesciunt, quibusdam officia voluptatem. Ipsa eum quae voluptatem inventore animi impedit excepturi minus, quaerat ab fuga? Aliquam porro voluptatibus corrupti fugiat fugit nobis incidunt!</p>
+							<p>С магазином qwerty.kz знакома давно, периодически покупаю здесь технику. Нравится, что на сайте всегда можно найти все характеристики, плюсы и минусы разных моделей и уже исходя из этого сделать выбор. Цены у них существенно отличаются от других интернет-магазинов. Не так давно покупала стиральную машину, покупка эта давно планировалась, так что было время все сравнить и взвесить. Перезвонили мне быстро, уточнили еще раз все моменты, меня все устроило. В назначенное время доставка приехала, занесли, распаковали и выдали нужные доки. Обслуживанием осталась довольна, магазин рекомендую.</p>
+						</div>
+					</div>
+					<div class="comments-item">
+						<div class="comments-item__img">
+							<img src="assets/img/comments-1.jpg" alt="клиент">
+						</div>
+						<div class="comments-item__title">
+							<h3>Нурсултанов Руслан</h3>
+						</div>
+						<div class="comments-item__text">
+							<p>Пандемия кезінде 100% сатып алуды интернет -дүкенге көштім. Тұрмыстық техника да ерекшелік емес. Мұнда мен пароходшының дұрыс моделін де, жақсы жеңілдікпен үтікті де таптым. Жеткізуге келетін болсақ, олар жақсы жұмыс істейді. Жігіттер әрқашан алдын ала хабарласады. Ақаулар мен бұзылулар болған жоқ. Мен QWERTY дүкені арқылы сатып алуды жалғастырамын.</p>
 						</div>
 					</div>
 					<div class="comments-item">
@@ -400,8 +399,7 @@
 							<h3>Нурсултанов Руслан</h3>
 						</div>
 						<div class="comments-item__text">
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet totam quae distinctio voluptatem, explicabo repellat hic neque ratione cupiditate assumenda consequuntur. Veniam fugit nulla laboriosam, numquam eaque esse quis repudiandae?
-							Saepe eos necessitatibus repellat temporibus est nesciunt, quibusdam officia voluptatem. Ipsa eum quae voluptatem inventore animi impedit excepturi minus, quaerat ab fuga? Aliquam porro voluptatibus corrupti fugiat fugit nobis incidunt!</p>
+							<p>Давно искал компанию, которая сможет полностью обеспечивать офис с технической стороны, остановился на компании qwerty.kz. Обеспечили весь офис в течение трех дней всем необходимым, дали советы по использованию, предложили очень выгодный договор по коммерческому сотрудничеству, так же подписал договор с их сервисным центром. Работаю с магазином, как корпоративный клиент, уже четвертый месяц, очень доволен!</p>
 						</div>
 					</div>
 				</div>
