fixid product-in

--- a/src/product-in.html
+++ b/src/product-in.html
@@ -288,7 +288,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="stateTwo" class="overview all-bg">
+				<div id="stateTwo" class="overview all-bg display-none">
 					<div class="overview-item__title">
 						<h1>Смартфон Samsung Galaxy A02 32GB Black</h1>
 					</div>
