--- a/src/index.html
+++ b/src/index.html
@@ -60,21 +60,65 @@
 							<div class="navigation__inner">
 								<div class="category-menu">
 									<ul>
-										<li><a href="#">Смартфоны и гаджеты</a></li>
-										<li><a href="#">Ноутбуки и компьютеры</a></li>
-										<li><a href="#">Всё для геймеров</a></li>
-										<li><a href="#">ТВ, аудио, видео</a></li>
-										<li><a href="#">Фототехника и квадрокоптеры</a></li>
-										<li><a href="#">Бытовая техника</a></li>
-										<li><a href="#">Техника для кухни</a></li>
-										<li><a href="#">Красота и здоровье</a></li>
-										<li><a href="#">Спорт, туризм, багаж</a></li>
-										<li><a href="#">Автотовары и транспорт</a></li>
-										<li><a href="#">Детские товары</a></li>
-										<li><a href="#">Товары для дома и сада</a></li>
+										<li><img src="assets/img/ноутбуки.svg" width="30" alt="Ноутбуки и компьютеры"><a href="#">Ноутбуки и компьютеры</a></li>
+										<li><img src="assets/img/смартфоны.svg" width="30" alt="Смартфоны и гаджеты"><a href="#">Смартфоны и гаджеты</a></li>
+										<li><img src="assets/img/гейм.svg" width="30" alt="Всё для геймеров"><a href="#">Всё для геймеров</a></li>
+										<li><img src="assets/img/тв.svg" width="30" alt="ТВ, аудио, видео"><a href="#">ТВ, аудио, видео</a></li>
+										<li><img src="assets/img/фото.svg" width="30" alt="Фототехника и квадрокоптеры"><a href="#">Фототехника и квадрокоптеры</a></li>
+										<li><img src="assets/img/быт.svg" width="30" alt="Бытовая техника"><a href="#">Бытовая техника</a></li>
+										<li><img src="assets/img/кухн.svg" width="30" alt="Техника для кухни"><a href="#">Техника для кухни</a></li>
+										<li><img src="assets/img/красота.svg" width="30" alt="Красота и здоровье"><a href="#">Красота и здоровье</a></li>
+										<li><img src="assets/img/спорт.svg" width="30" alt="Спорт, туризм, багаж"><a href="#">Спорт, туризм, багаж</a></li>
+										<li><img src="assets/img/авто.svg" width="30" alt="Автотовары и транспорт"><a href="#">Автотовары и транспорт</a></li>
+										<li><img src="assets/img/детск.svg" width="30" alt="Детские товары"><a href="#">Детские товары</a></li>
+										<li><img src="assets/img/серверы.svg" width="30" alt="Товары для дома и сада"><a href="#">Товары для дома и сада</a></li>
 									</ul>
 									<div id="btn-close" class="category header-burger dn-mob">Закрыть</div>
 								</div>
+							</div>
+						</div>
+						<div id="navInContent" class="nav__incontent">
+							<div class="nav__incontent-item nav__incontent-wrapper">
+								<ul>
+									<a href="#">Ноутбуки и аксессуары</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>
+								<ul>
+									<a href="#">Комплектующие</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>
+								<ul>
+									<a href="#">Сетевое оборудование</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>	
+							</div>
+							<div class="nav__incontent-item nav__incontent-wrapper">
+								<ul>
+									<a href="#">Ноутбуки и аксессуары</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>
+								<ul>
+									<a href="#">Комплектующие</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>
+								<ul>
+									<a href="#">Сетевое оборудование</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>	
+							</div>
+							<div class="nav__incontent-item nav__incontent-wrapper">
+								<ul>
+									<a href="#">Ноутбуки и аксессуары</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>
+								<ul>
+									<a href="#">Комплектующие</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>
+								<ul>
+									<a href="#">Сетевое оборудование</a>
+									<li><a href="#">Ноутбуки</a></li>
+								</ul>	
 							</div>
 						</div>
 						<div class="overlay">
